test removing blog

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,7 +1,7 @@
-- title: See [PDF](Mengbing_Li.pdf)
+- title: See [PDF](MengbingLi_CV.pdf)
   type: map
   # contents:
-  #   - name: Name
+  #   - name: [PDF](MengbingLi_CV.pdf)
   #     value: Mengbing Li
 
 # - title: Education
