--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Feel free to reach out by email: mengbing [at] umich [dot] edu.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -265,8 +265,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Li]
+  first_name: [Mengbing]
 
   style: apa
   locale: en
