--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -2,6 +2,7 @@ github_users:
   - limengbinggz
 
 github_repos:
+  - limengbinggz/ddtlcm
   - limengbinggz/DIRL
   - limengbinggz/CUSUM-RL
   - zhenkewu/lotR
